# plaque-toolkit

./: ! Open Plaque Toolkit (BEST).bat  ! START HERE - best app.txt  .gitattributes  .gitignore  .zenodo.json  Add Scale Bar.bat  Batch Plates (CSV per plate).bat  CITATION.cff  Compare Turbidity.bat  Edit Plaques (GUI).bat  FEATURE_IDEAS.md  INSTALL.md  LICENSING.md  Measure Plaques.bat  NOTICE  Original Plaque Size Tool (1 plate).bat  Original Plaque Size Tool (batch).bat  Plaque Toolkit (app).bat  Plaque Toolkit.bat  Plaque Toolkit.command  Plaque Toolkit.sh  Precise Detect (best engine).bat  README.md  THIRD_PARTY_LICENSES.md  add_scale.py  build_installer.bat  build_macos.sh  compile_excel.py  environment-precise.yml  environment.yml  heic_to_tiff.py  install.bat  label_store.py  make_figure.py  measure_samples.py  plaque_app.py  plaque_gui.py  plaque_size_tool.py  plaque_turbidity.py  plate_crop.py  (+10 more)
.claude/: launch.json
Plaque Toolkit (all versions)/: 0 - BEST - which to run (read me).txt  1 - Measure plaques (current).bat  2 - Edit plaques - click GUI.bat  3 - Batch a folder (current).bat  4 - ORIGINAL published tool - one plate.bat  5 - ORIGINAL published tool - batch.bat  6 - Compare turbidity (cross-phage).bat  7 - Plaque Toolkit app (everything).bat  READ ME — open this.html
_plaqseg/: __init__.py  run_plaqseg.py
app/: __init__.py  agreement.py  batch_measure.py  canvas_editor.py  engine_api.py  env_paths.py  fiji_dialog.py  fiji_export.py  fiji_match.py  imagej_roi.py  plaque_canvas.py  style.py  ui.py  validate.py  widgets.py  workers.py
docs/: CREDITS_AND_LINEAGE.md  DEVELOPER.md  ENGINES.md  FIJI_TUTORIAL.html  FIJI_VALIDATION_PROTOCOL.html  HOWTO_AND_VERIFICATION.html  HOW_IT_WAS_BUILT.md  INSTALL.md  LABELLING_GUIDE.md  MANUSCRIPT_METHODS_AND_AI.md  METHODS_TEMPLATE.md  MODEL_CARD.md  PAPER_METHODS.md  PLAQUE_SIZE_TOOL.md  PROJECT_MAP.md  PUBLICATION.md  PUBLISHING_CHECKLIST.md  README.md  STATS_EXPLAINED.html  STRUCTURE.md  TESTING_AND_VALIDATION.md  TOOL_ATLAS.html  TRAINING_AND_MODELS.md  USER_GUIDE.md  (+5 more)
plaque_stats/: .gitignore  GUIDE.html  Make Example + Template Data.bat  README.md  Run Analysis App.bat  Run CLI (example).bat  Run R App.bat  START_HERE.txt  TEMPLATE.csv  app.R  app_py.py  example_data_long.csv  example_data_wide.csv  plaque_stats.py  plaque_stats_launch.py  pyproject.toml  requirements.txt  sync_to_downloads.ps1
plaque_stats/agreement/: GUIDE.html  README.md  Run Agreement (tool vs manual).bat  Run Agreement App (browser).bat  agreement.py  app_py.py  example_agreement.csv
plaque_stats/agreement/build_exe/: agreement_app.spec  freeze_entry.py
plaque_stats/build_exe/: build_app.ps1  freeze_entry.py  plaque_stats_app.spec
plaque_stats/data/: README.txt
plaque_stats/results/: README.txt
(+38 files in other folders)
